--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
     "esbuild": "^0.25.0",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
+    "sortablejs": "^1.15.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
     "@vitejs/plugin-vue": "^5.2.1",
     "eslint": "^9.20.1",
     "eslint-plugin-vue": "^9.32.0",
     "less": "^4.2.2",
+    "sass-embedded": "^1.85.1",
     "vite": "^6.1.0",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
