--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "pinia-plugin-persistedstate": "^4.2.0",
     "sortablejs": "^1.15.6",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue3-markdown-it": "^1.0.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
