--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "sortablejs": "^1.15.6",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.121.0",
+    "vanta": "^0.5.24",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue3-markdown-it": "^1.0.10"
